--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-toastify": "^10.0.5",
     "recharts": "^2.8.0",
     "socket.io-client": "^4.7.2",
+    "stripe": "^16.6.0",
     "tailwindcss": "3.3.3",
     "timeago.js": "^4.0.2",
     "typescript": "5.1.6",
