--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bufferutil": "^4.0.7",
+    "dotenv": "^16.4.5",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "formik": "^2.4.3",
