--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=8000
-ORIGIN=["https://solvit-test-deploy.vercel.app","https://solvit-client.vercel.app"]
+ORIGIN=["https://solvit-test-deploy.vercel.app","https://solvit-client.vercel.app","https://solvit-ten.vercel.app","https://solvit.live"]
 DB_USER=solvitwbjee
 DB_PASSWORD=mDD8Mh91XSenCatS
 DB_URL="mongodb+srv://solvitwbjee:mDD8Mh91XSenCatS@soivit.nqnpubn.mongodb.net/Solvit?retryWrites=true&w=majority&appName=soivit"
