--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only server.ts",
     "start": "node build/server.js",
-    
     "build": "tsc"
   },
   "author": "SolviT",
@@ -40,6 +39,7 @@
     "mongoose": "^8.5.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
+    "razorpay": "^2.9.4",
     "socket.io": "^4.7.5",
     "stripe": "^16.2.0",
     "ts-node-dev": "^2.0.0"
