--- a/server/package.json
+++ b/server/package.json
@@ -42,7 +42,8 @@
     "razorpay": "^2.9.4",
     "socket.io": "^4.7.5",
     "stripe": "^16.2.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "twilio": "^5.2.2"
   },
   "devDependencies": {
     "@types/express-fileupload": "^1.5.0",
