--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "start": "node build/server.js",
     "build": "tsc"
   },
-  "author": "SolviT",
+  "author": "Gyanoda",
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
